--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.0.0",
@@ -20,6 +21,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "moment": "^2.27.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
